@@ -1,3 +1,9 @@
+#Flags:
+# - Check for desire, but don't try to meet it
+# * If it passes, great! If not, it's OK
+# ! Invert
+# @ World call (life entity not passed)
+
 [GOAL_DISCOVER]
 DESIRE: HAS_NON_RELAXED_GOAL
 TIER: RELAXED
@@ -6,6 +12,15 @@ TIER: RELAXED
 DESIRE: !HAS_NEEDS
 TIER: SURVIVAL
 SET_FLAGS: {"wanted_items": GET_NEEDED_ITEMS}
+
+[GOAL_CAMP]
+DESIRE: -*IS_IN_SHELTER,-!%IS_NIGHT
+LOOP_UNTIL: !%IS_NIGHT
+TIER: URGENT
+
+[GOAL_GET_SHELTER]
+DESIRE: IS_IN_SHELTER,-!%IS_NIGHT
+TIER: URGENT
 
 [ACTION_WANDER]
 SATISFIES: HAS_NON_RELAXED_GOAL
@@ -23,5 +38,21 @@ NON_CRITICAL: True
 SATISFIES: KNOWS_ABOUT_ITEM
 DESIRES: HAS_NON_RELAXED_GOAL
 LOOP_UNTIL: HAS_NEEDS_TO_MEET
+
+[ACTION_GO_TO_SHELTER]
+SATISFIES: IS_IN_SHELTER
+DESIRES: HAS_SHELTER
+EXECUTE: TAKE_SHELTER
+LOOP_UNTIL: IS_IN_SHELTER
+
+[ACTION_FIND_SHELTER]
+SATISFIES: HAS_SHELTER
+DESIRES: HAS_NON_RELAXED_GOAL
+LOOP_UNTIL: HAS_SHELTER
+
+[ACTION_IDLE]
+SATISFIES: IS_IDLE
+EXECUTE: NEVER
+LOOP_UNTIL: ALWAYS
 
 #END
